--- a/iptables/Makefile
+++ b/iptables/Makefile
@@ -3,8 +3,8 @@
 ## 2. 设定预设策略
 ## 3. 添加各项规则
 
-ICMP_TYPE:=0 3 4 11 12 14 16 18
-SERVICES:=445 80
+ICMP_TYPE:=0 3 4 8 11 12 14 16 18
+SERVICES:=445 80 21 5080
 
 open:clean_t policy_t rule_t
 close:clean_t
